--- a/index.html
+++ b/index.html
@@ -1,78 +1,39 @@
-﻿<HTML>
-<HEAD>
-<TITLE> เพื่อนสนิทของฉัน </TITLE>
-</HEAD>
-<BODY>
-<CENTER> <font face = "angsana new" size = "8" color = "blue"> เพื่อนสนิทของฉัน </font> </CENTER>
-<br>
-<TABLE width = "80%" height = "80%" BORDER = "2" align = "center" >
-<CAPTION> เพื่อนสนิทของฉัน </CAPTION>
-<TR>
-<TH> รูปเพื่อนของฉัน </TH>
-<TH> ชื่อเพื่อนของฉัน  </TH>
-</TR>
-
-<TR>
-<TH><IMG SRC = "4.2.jpg"></TH>
-<TH>นาย มนัสชัย ศรีนาราง</TH>
-</TR>
-
-<TR>
-<TH><IMG SRC = "4.3.jpg"></TH>
-<TH>นาย สราวุธ สวมสิน</TH>
-</TR>
-
-<TR>
-<TH><IMG SRC = "4.5.jpg"></TH>
-<TH>นาย จิรพัฒน์ ลาดสุวรรณ</TH>
-</TR>
-
-</TABLE>
-</BODY>
-</HTML>
-
-<html>
-<head>
-<title>ยินดีต้อนรับสู่เว็บไซต์ นัฐวุฒ</title>
-
+﻿<html>
+<head> <title> การจัดหน้าเว็บเพจด้วยตาราง</title> </head>
 <body>
-<TABLE BORDER = "2" width = "50%" height = "60%" align="center">
-<CAPTION> <b> <font size="10" face="angsana new">เพื่อนสนิทของฉัน</font> </b> </CAPTION>
+<table width="1250" border="1" bordercolor="gray" cellspacing="0" cellpadding="0">
 
+  <tr><td height="150" colspan="2" valign="top"> <img src="จ่า.jpg"></td></tr>
 
-<TABLE BORDER = "2" align="center">
-<CAPTION> <b> <font size="6" face="angsana new">เพื่อนสนิทของข้าพเจ้า</font> </b> </CAPTION>
-<TR> <TD width="30%" align="center"> ชื่อ-สกุล </TD> <TD width="30%" align="center"> ภาพถ่าย </TD> </TR>
-<TR> <TD align="center"> ธีรภัทร ซุยแป </TD> <TD align="center"> <IMG SRC="14.jpg"> </TD> </TR>
-<TR> <TD align="center"> สราวุฒิ   สวมสิน </TD> <TD align="center"> <IMG SRC="15.jpg"> </TD> </TR>
-<TR> <TD align="center"> ธิติสรณ์ ประเทศา</TD> <TD align="center"> <IMG SRC="16.jpg"> </TD> </TR>
-<TR> <TD align="center"> จิรพัฒน์ ลาดสุวรรณ </TD> <TD align="center"> <IMG SRC="13.jpg"> </TD> </TR>
-<TR> <TD align="center"> มนัสชัย ศรีนาราง</TD> <TD align="center"> <IMG SRC="12.jpg"> </TD> </TR>
-<TR> <TD align="center"> ภานุ สุขเอี่ยม</TD> <TD align="center"> <IMG SRC="17.jpg"> </TD> </TR>
+  <tr><td width="150" height="400" valign="top">
 
-</TABLE>
-</BODY>
+    <table width="150" border="1" >
+
+        <tr><td width="150" bgcolor="#79d4f6">ประวัติอำเภอท่าเรือ</td></tr>
+
+        <tr><td width="150" bgcolor="#0006ff">แนะนำโรงเรียน</td></tr>
+
+        <tr><td width="150" bgcolor="#12ff00">สถานที่ท่องเที่ยว</td></tr>
+
+      </table>
+
+</td>
+
+    <td width="1100" height="400"valign="top"> <img src="dod.jpg"> </td>
+
+  </tr>
+
+  <tr>
+    <td height="90" colspan="2" align="center" bgcolor="#f9dd5d">จัดทำโดย นายนัฐวุฒ สีห์สุรัติ<br />
+
+    E-mail : 24228@tharua.ac.th <br />
+
+   </td>
+
+ </tr>
+
+</table>
+
+</body>
+
 </html>
-
-</TABLE><TABLE width =1000 border="2" align="center">
-<TR> <TH align="center" width="20%" colspan="2">เ</TABLE><TABLE width =1000 border="2" align="center">
-<TR> <TH align="center" width="20%" colspan="2">เพื่อนสนิทของฉัน</TH>
-<TR> <TD align="center" colspan="2"><IMG SRC="5.8.jpg"></TD>
-<TR> <TH align="center" colspan="2">นัฐวุฒ สีห์สุรัติ</TH>
-<TR> <TD align="center">เพศชาย</TD> <TD align="center">เพศหญิง</TD>
-
-<TR> <TD align="center"> <IMG SRC="5.6.jpg"> </TD> <TD align="center"> <IMG SRC="6.1.jpg"> </TD>
-
-<TR> <TD align="center"> สราวุฒิ สวมสิน </TD> <TD align="center"> ปริฐตา เกตุพุก </TD>
-
-<TR> <TD align="center"> <IMG SRC="5.7.jpg"> </TD> <TD align="center"> <IMG SRC="5.9.jpg"> </TD>
-
-<TR> <TD align="center"> มนัสชัย ศรีนาราง </TD> <TD align="center"> ยุวดี พุทธศรีระ  </TD>
-
-<TR> <TD align="center"> <IMG SRC="Untitled-122.jpg"> </TD> <TD align="center"> <IMG SRC="6.0.jpg"> </TD>
-
-<TR> <TD align="center"> ภานุ สุขเอี่ยม </TD> <TD align="center"> รุ่งทิพย์  เจ็กตระกูล </TD>
-
-
-</TABLE>
-</BODY>
